# Bound-Representation-Inference-Compilation-Kernel

./: .gitignore  3D_CAPABILITIES_REPORT.md  3D_QUICKSTART.md  AGENTS_COVERAGE_ANALYSIS.md  AGENTS_FINAL_REPORT.md  AGENTS_IMPLEMENTATION_COMPLETE.md  AGENT_AUDIT_REPORT.md  AGENT_COMPLETION_STATUS.md  AGENT_IMPLEMENTATION_RESEARCH.md  AGENT_IMPLEMENTATION_RESEARCH_GUIDE.md  AGENT_PAGE_MAPPING.md  AGENT_SUITE_IMPLEMENTATION.md  ALL_AGENTS_MASTER_SPEC.md  API_SETUP_GUIDE.md  BACKEND_HARDCODED_AUDIT.md  BRICK_OS_MASTER_GUIDE.md  CALCULIX_INSTALL_GUIDE.md  CONSOLIDATION_SUMMARY.md  CORE_AGENTS_PROGRESS.md  COST_TOLERANCE_IMPLEMENTATION_SUMMARY.md  CRITICS_ORACLES_ADAPTERS_AUDIT.md  DEPENDENCY_STATUS.md  DFM_AGENT_IMPLEMENTATION_SUMMARY.md  DFM_AGENT_PRODUCTION_COMPLETE.md  FEA_IMPLEMENTATION_SUMMARY.md  FINAL_REPORT.md  FIXES_SUMMARY.md  FREE_PRICING_APIS.md  FRONTEND_AGENT_INTEGRATION_STATUS.md  IMPLEMENTATION_CORRECTED_ASSESSMENT.md  IMPLEMENTATION_HONESTY_ASSESSMENT.md  IMPLEMENTATION_MASTER_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TIER1.md  LANDING_REQUIREMENTS_PLAN.md  LANDING_REQUIREMENTS_PLAN_V2.md  MIGRATION_STATUS.md  NETWORK_AGENT_IMPLEMENTATION.md  (+96 more)
backend/: .env.example  agent_registry.py  agent_selector.py  ares.py  enums.py  (+46 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/fs_core/: Cargo.toml
src-tauri/crates/fs_core/src/: lib.rs
src-tauri/crates/kernel_bridge/: Cargo.toml
src-tauri/crates/kernel_bridge/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
(+852 files in other folders)
