[package]
name = "brick"
version = "0.1.0"
description = "BRICK OS - Hardware Design IDE"
authors = ["BRICK Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = [
    "crates/fs_core",
    "crates/kernel_bridge"
]

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_core = { path = "crates/fs_core" }
kernel_bridge = { path = "crates/kernel_bridge" }
